# rasengan

./: .gitignore  LICENSE  README.md  cost_history.csv  pyproject.toml  real_test.py  save.csv  test.ipynb  testbed_1.py  testbed_2.py  testbed_3.py
choco/: 1_table.config  1_table.ipynb  1_table_depth.csv  1_table_evaluate.csv
env/: cpu-env.yml  environment_cpu.yml  environment_gpu.yml  gpu-cuda12.8-env.yml  requirements_cpu.txt  requirements_gpu.txt  testbed_cpu.py  testbed_gpu.py
env/merge/: environment_cpu.yml  environment_gpu.yml
env_setup/: cpu-env.yml  env_check.py
qto/: testbed_2.py
qto/model/: lin_constr_bin_opt.py  model.py
qto/problems/: capital_budgeting_problem.py  cnst_demo.py  facility_location_problem.py  graph_coloring_problem.py  job_scheduling_problem.py  k_partition_problem.py  set_cover_problem.py  traveling_salesman_problem.py
qto/solvers/: abstract_explorer.py  abstract_solver.py
rasengan/model/: lin_constr_bin_opt.py  model.py
rasengan/problems/: capital_budgeting_problem.py  cnst_demo.py  facility_location_problem.py  graph_coloring_problem.py  job_scheduling_problem.py  k_partition_problem.py  set_cover_problem.py  traveling_salesman_problem.py
rasengan/solvers/: abstract_explorer.py  abstract_solver.py
rasengan/utils/: gadget.py  qiskit_plugin.py
reproduce/: results_sumarry.ipynb  results_sumary.ipynb  results_summary.ipynb  run_all_experiments.py
reproduce/figure_10/: large_evaluation.csv  noisy_evaluation.csv  only_plot.ipynb  run_and_plot.ipynb  run_backend.py  segments_and_depth.csv
sub/: aa.py  aaa.py
(+111 files in other folders)
